<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/tlo"
    >
    <TextView
        android:text="@string/lab01_title"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        />
    <Button
        android:id="@+id/lab01_button_continue"
        android:text="@string/lab01_button_continue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/lab01_button_new_game"
        android:text="@string/lab01_button_new_game"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/lab01_button_info"
        android:text="@string/lab01_button_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/lab01_button_exit"
        android:text="@string/lab01_button_exit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>