<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.myapplication2.app.MainActivity"
    android:background="@color/tlo"
    android:orientation="vertical"
    >

    <TextView
        android:text="@string/mobilne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20dp"
        />
    <Button
        android:id="@+id/button_lab01"
        android:text="@string/text_button_lab01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/button_lab02"
        android:text="@string/text_button_lab02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/button_exit"
        android:text="@string/text_exit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
